# netbox-mcp-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.mcpo  README.md  claude.md  config.go  config.py  constants.py  env.sample  go.sum  main.go  netbox_brief_mode_plan.md  netbox_client.py  netbox_pagination_plan.md  pyproject.toml  renovate.json5  requirements.txt  server.py  types.go
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  container-rescan.yaml  container-scan.yaml  docker-publish.yml  pypi-publish.yml  release-finalize.yml  release.yml  test.yml
cmd/netbox-mcp-server/: main.go
docs/: netbox-api-endpoints-checklist.md
docs/plans/: 2025-10-28-src-layout-semantic-release-implementation.md
golang/: .env.example  .gitignore  CRUD_OPERATIONS.md  HTTP_CLIENT_QUICKSTART.md  MCP_CLIENT_CONFIG.md  README.md  claude_desktop_config.example.json  client.go  config.go  go.mod  go.sum  main.go
internal/client/: client.go
internal/config/: config.go
internal/types/: types.go
python/: CHANGELOG.md  README-client.md
python/tests/: test_ordering.py  test_pagination.py
src/netbox_mcp_server/: __init__.py  config.py  (+4 more)
tests/: test_brief.py  test_client_fallback.py  test_config.py  test_fallback_integration.py  test_filter_validation.py  test_graphql.py  test_http_auth.py  test_impl_parity.py  test_mcp_boundary.py  test_ordering.py  test_pagination.py  test_param_parsing.py  test_search.py  test_tool_descriptions.py  test_tool_registration.py  test_write_registration.py  test_writes.py
(+2 files in other folders)
