[project]
name = "netbox-mcp-server"
version = "0.1.0"
description = "A read-only MCP server for NetBox"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "httpx>=0.28.1",
    "fastmcp>=2.13.0,<2.14",
    "requests>=2.31.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
