[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netbox-mcp-server"
version = "1.0.0"
description = "A read-only MCP server for NetBox"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "httpx>=0.28.1",
    "fastmcp>=2.14.0,<3",
    "requests>=2.31.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "ruff>=0.14.10",
]

[project.scripts]
netbox-mcp-server = "netbox_mcp_server.server:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-semantic-release>=10.4.1",
    "ruff>=0.14.11",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/netbox_mcp_server/__init__.py:__version__"]
branch = "main"
upload_to_vcs_release = true
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "chore", "refactor", "test", "ci", "perf"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
